--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = SDL
 	url = https://github.com/libsdl-org/SDL.git
 	branch = SDL2
+[submodule "easy_profiler"]
+	path = easy_profiler
+	url = https://github.com/yse/easy_profiler.git
